[gd_scene load_steps=6 format=3 uid="uid://ro4gcfqpqioc"]

[ext_resource type="Script" path="res://src/game/help_point.gd" id="1_cv7tx"]
[ext_resource type="Texture2D" uid="uid://q3gmup7cadaf" path="res://assets/objects/help_point.png" id="2_qfw2b"]
[ext_resource type="FontFile" uid="uid://ckdjks6e8qo4n" path="res://assets/fonts/VCR_OSD_MONO_1.001.ttf" id="3_cn2ic"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4shxy"]
size = Vector2(32, 32)

[sub_resource type="LabelSettings" id="LabelSettings_ekxv2"]
font = ExtResource("3_cn2ic")
font_size = 24
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[node name="HelpPoint" type="Area2D"]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("1_cv7tx")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -12)
texture = ExtResource("2_qfw2b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_4shxy")

[node name="InteractLabel" type="Label" parent="."]
offset_left = -33.0
offset_top = -32.0
offset_right = 234.0
offset_bottom = -9.0
scale = Vector2(0.25, 0.25)
text = "Press E to Interact"
label_settings = SubResource("LabelSettings_ekxv2")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
